flex gap fix

--- a/src/index.css
+++ b/src/index.css
@@ -52,12 +52,13 @@ img {
   height: 10%;
   width: 10%;
   border-radius: 50%;
+  margin-right: 1rem;
 }
 
 .description {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  /* gap: 1rem; */
 }
 
 .description-text {
@@ -80,7 +81,7 @@ img {
 
 .time-flex {
   display: flex;
-  gap: 0.5rem;
+  /* gap: 0.5rem; */
   margin-top: 0.3rem;
   color: var(--text-color);
 }
@@ -93,6 +94,7 @@ img {
 
 .emoji {
   font-size: 0.8rem;
+  margin-left: 0.8rem;
 }
 
 .site-title {
@@ -145,10 +147,10 @@ img {
 /* BELOW 592px  */
 @media (max-width: 37em) {
   html {
-    font-size: 53%;
+    font-size: 60%;
   }
 
   .container {
-    max-width: 30rem;
+    max-width: 35rem;
   }
 }
